<resources>
    <string name="app_name">LearnedPatterns</string>
    <string name="LearnedPatterns">Learned patterns:\n</string>
    <string name="builder">Builder</string>
    <string name="coffee_screen_builder">Coffee Screen Builder:</string>
    <string name="brown_sugar_coffee">Brown Sugar Coffee</string>
    <string name="flat_white_coffee">Flat White Coffee</string>
    <string name="frappe_coffee">Frappe Coffee</string>
    <string name="mocco_coffee">Mocco Coffee</string>
    <string name="singleton">Singleton</string>
    <string name="kotlin_singleton_sun">Kotlin singleton Sun</string>
    <string name="factory_method">Factory Method</string>
    <string name="factory_method_screen">Factory Method screen:</string>
    <string name="which_country_to_deliver_to">Which country to deliver to:</string>
    <string name="russia">Russia</string>
    <string name="germany">Germany</string>
    <string name="usa">USA</string>
    <string name="belarus">Belarus</string>
    <string name="facade_screen">Facade screen:</string>
    <string name="get_user">Get User</string>
    <string name="observer">Observer</string>
    <string name="observer_screen">Observer screen:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_screen">First Screen</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Third Screen</string>
    <string name="to_remove_observer_just_press">To remove observer just press:</string>
    <string name="weather_value">Weather value:</string>
    <string name="observers">Observers: </string>
</resources>